Sun Mar  9 06:42:40 2014  Eric Wong  <e@80x24.org>

	* variable.c (struct global_variable): shrink by 8 bytes on 64-bit

Sat Mar  8 17:42:51 2014  Eric Wong  <e@80x24.org>

	* vm.c (add_opt_method): cleanup to use rb_method_entry_at

Sat Mar  8 13:46:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cptr.c (dlptr_free), ext/dl/handle.c (dlhandle_free),
	  ext/fiddle/handle.c (fiddle_handle_free),
	  ext/fiddle/pointer.c (fiddle_ptr_free): fix memory leak.
	  based on the patch Heesob Park at [ruby-dev:48021] [Bug #9599].

Sat Mar  8 13:30:39 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (obj2uid, obj2gid): now getpwnam_r() and getgrnam_r()
	  may need larger buffers than sysconf values, so retry with
	  expanding the buffer when ERANGE is returned.
	  [ruby-core:61325] [Bug #9600]

Sat Mar  8 07:35:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (find_i): yield multiple values instead of a packed
	  array, so that lambda block can work.  with tests by Alex
	  Rothenberg.  [ruby-core:61340] [Bug #9605]

Fri Mar  7 19:29:13 2014  Eric Wong  <e@80x24.org>

	* vm_eval.c (vm_call0_body): use RARRAY_CONST_PTR
	  (check_funcall_exec): ditto
	  [ruby-core:61360]

Fri Mar  7 19:14:11 2014  Eric Wong  <e@80x24.org>

	* vm_eval.c (vm_call0_body): fix RB_GC_GUARD location
	  (check_funcall_exec): ditto
	  [Bug #9609]

Fri Mar  7 14:48:17 2014  Narihiro Nakamura  <authornari@gmail.com>

	* parse.y (ENC_SINGLE): Unused macro removed.

Fri Mar  7 12:06:19 2014  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* test/openssl/test_ssl.rb: Reuse TLS default options from
	  OpenSSL::SSL::SSLContext::DEFAULT_PARAMS.

Thu Mar  6 15:15:24 2014  Zachary Scott  <e@zzak.io>

	* doc/syntax/assignment.rdoc: [DOC] Fix assignment directions
	  By @idupree [Fixes GH-555] https://github.com/ruby/ruby/pull/555

Thu Mar  6 15:07:18 2014  Zachary Scott  <e@zzak.io>

	* doc/syntax/methods.rdoc: [DOC] Fix example for block arguments