@@ -1,10 +1,13 @@
 begin
   require_relative 'helper'
+  require_relative '../ruby/envutil'
 rescue LoadError
 end
 
 module Fiddle
   class TestFunction < Fiddle::TestCase
+    include Test::Unit::Assertions
+
     def setup
       super
       Fiddle.last_error = nil
@@ -69,6 +72,12 @@ module Fiddle
       str = f.call(buff, "123")
       assert_equal("123", buff)
       assert_equal("123", str.to_s)
+    end
+
+    def test_no_memory_leak
+      prep = 'r = Fiddle::Function.new(Fiddle.dlopen(nil)["rb_obj_tainted"], [Fiddle::TYPE_UINTPTR_T], Fiddle::TYPE_UINTPTR_T); a = "a"'
+      code = 'begin r.call(a); rescue TypeError; end'
+      assert_no_memory_leak(%w[-W0 -rfiddle], "#{prep}\n1000.times{#{code}}", "10_000.times {#{code}}", limit: 1.2)
     end
   end
 end if defined?(Fiddle)
